# r2_perception

./: CMakeLists.txt  package.xml  todo.txt  todo2.txt
cfg/: hearing_pipeline.cfg  vision_pipeline.cfg
cpp/: CMakeLists.txt  FaceFuse.cpp  FaceFuse.h  Fusion.h  FusionServer.cpp  FusionServer.h  HandFuse.cpp  HandFuse.h  SaliencyFuse.cpp  SaliencyFuse.h  SensorFusionMain.cpp  package.xml
cpp/timeoctomap/: CMakeLists.txt  OcData.h
cpp/timeoctomap/pointmemory/: .CMakeLists.txt.swp  .PointMemorySCM.cc.swp  .pointmem.scm.swp
msg/: CandidateFace.msg  CandidateHand.msg  CandidateSaliency.msg  CandidateSound.msg  CandidateSpeech.msg  EstablishedHand.msg  EstablishedSaliency.msg  FaceRequest.msg  FaceResponse.msg  Hand.msg  Saliency.msg  Sound.msg  Speech.msg
scripts/: detect_faces.py  detect_faces_haar.py  detect_faces_haar_hands_saliency_ittikoch.py  detect_hands.py  detect_saliency.py  detect_saliency_ittikoch.py  detect_sounds.py  detect_sounds_hyst.py  face_analysis.py  face_analysis_openbr.py  face_predictor.py  fusion.py  gather_pau_states.py  hand_predictor.py  hearing_pipeline.py  realsense_param_proxy.py  saliency_predictor.py  speech_to_text.py  speech_to_text_google.py  user_predictor.py  vision_pipeline.py
test/: action.launch  ai.launch  perception.launch  perception.yaml  result.csv  robot.launch  robot.urdf  run.sh  urdf.rviz
